HHH-19916 - Drop JUnit 4 usage